2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	Fixes #136597 (gtkgl still referenced in build files)
	* gtk/.cvsignore:
	* gtk/makefile.msc:
	Removed references to gtkgl.

2004-03-09  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.override (pygdk_filter_func_marshal): Impl.
	(_wrap_gdk_window_add_filter): Impl.

2004-03-08  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* configure.in: Remove leftover definition of gtkgl_required_version.

	* gobjectmodule.c (pyg_enum_add_constants): Delegate to
	pyg_flags_add_constants if the GType is really a flags type
	instead of enum.
	(pyg_flags_add_constants): Delegate to pyg_enum_add_constants if
	the GType is really a enum type instead of flags.  Based on John
	Ehresman's patch.  Fixes (better) #136204 (GtkTextSearchFlags warning).

2004-03-07  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
         * codegen/docextract.py: avoid the non-uniform behavior of gtk-doc
         to have an imaginary "returns" parameter. it is converted into the
         <return>-tag.

2004-03-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* examples/pygtk-demo/gtk-logo-rgb.gif,
	* Makefile.am (EXTRA_DIST): Add gtk-logo-rgb.gif, because of stock
	icon registration example.

	* examples/pygtk-demo/demos/appwindow.py: Fix stock icon
	registration.

2004-03-06  John Ehresman  <jpe@wingide.com>

	* gtk/gtktreeview.override (map_expanded_rows_cb)
	(_wrap_gtk_tree_view_map_expanded_rows): Wrapper for
	GtkTreeView.map_expanded_rows.  Fixes #136309.  Review and minor
	enhancement by Gustavo Carneiro.

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_iface_init)
	(pygtk_generic_tree_model_unref_node)
	(pygtk_generic_tree_model_ref_node): Add support for optional
	TreeModel ref_node & unref_node callbacks.  Fixes #136312.
	Reviewed by Gustavo Carneiro.

	* gtk/gtktreeview.override (pygtk_cell_data_func_marshal): Fix
	reference problem on cunote->data.  Fixes #136306