@@ -1,5 +1,11 @@
 2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
+	* codegen/code-coverage.py: utility to scan the unmatched symbols
+	from the binded libraries. Written by James Henstridge (see bug
+	#71465)
+
+2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
 	Fixes #136597 (gtkgl still referenced in build files)
 	* gtk/.cvsignore:
 	* gtk/makefile.msc:
